Open notification when number of voicemails changes.

--- a/extension/background.html
+++ b/extension/background.html
@@ -41,7 +41,7 @@
        if (count > 0) {
          chrome.browserAction.setBadgeBackgroundColor({"color": [0,0,192,255]});
          chrome.browserAction.setBadgeText({"text": "" + count});
-         if (waitingMessages == 0) {
+         if (waitingMessages != count) {
            notify(count);
          }
        }
